welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:12: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-1 to (taille-1)){
        ^